--- a/_posts/2017-01-20-jquery.markdown
+++ b/_posts/2017-01-20-jquery.markdown
@@ -1,10 +1,8 @@
 ---
 layout: post
 title: start
-date: 2017-01-17
+date: 2017-01-20
 comments: true
 external-url:
-categories: Ember.js
+categories: jQuery
 ---
-
-
