--- a/_posts/2017-2-27-command.markdown
+++ b/_posts/2017-2-27-command.markdown
@@ -40,8 +40,19 @@ categories: ruby
 
 `Ctrl+R` 跳转标记。
 
+<hr>
 
+`alt+shift+t` - Run a Cake task
+`alt+shift+r` - Run some CoffeeScript (prints output to a panel on the bottom)
+`alt+shift+s` - Run a syntax check
+`alt+shift+c` - Compile a file
+`alt+shift+d` - Display compiled JavaScript
+`alt+shift+l` - Display lexer tokens
+`alt+shift+n` - Display parser nodes
+`alt+shift+w` - Toggle watch mode
+`alt+shift+p` - Toggle output panel
 
+>
 ### Js console command
 ---
 
