--- a/_posts/2017-03-29-js-basic.markdown
+++ b/_posts/2017-03-29-js-basic.markdown
@@ -7,14 +7,14 @@ external-url:
 categories: javascript
 ---
 
-## javascript basic 概述
+### javascript basic 概述
 
-### 1、js的组成
+### 1. js的组成
 - 由核心语法（ECMAScript）
 - 浏览器对象模型（BOM）
 - 文档对象模型（DOM）
 
-### 2、js的基本结构
+### 2. js的基本结构
 
 语法:
 
@@ -33,7 +33,7 @@ categories: javascript
 （3）type属性不推荐写成 `language= " javascript "` ,不符合XHMLT1.0。
 
 
-### 3、js引用方式
+### 3. js引用方式
 
 方式一：HTML标签中引用；
 
@@ -49,7 +49,7 @@ expression(document.body.offsetWidth -110 + "px");
 方式四：浏览器地址栏输入; `JavaScript：alert（"hello!")`
 
 
-### 4、常用的输入、输出
+### 4. 常用的输入、输出
 
 `alert()`
 ```
@@ -66,9 +66,9 @@ confirm("确认信息？"); //确定则返回true，取消则返回false
 
 ```
 
-## javaScript的基本语法
+### javaScript的基本语法
 
-### 1、 变量声明和使用
+### 1. 变量声明和使用
 
 js变量：JavaScript变量用于保存值、保存表达式;
 
@@ -101,7 +101,7 @@ num = 100; //相当于window.num = 100; （不推荐）
 - `= `运算符用于给变量赋值，变量可以重复赋不同类型的值；
 
 
-### 2、数据类型
+### 2. 数据类型
 
 - Undefined 
 1、Undefined 类型只有一个值，即 undefined
@@ -156,16 +156,16 @@ var iNum=23.0; //浮点数
 - 变量、对象和函数的名称有意义，最好使用驼峰式命名;
 - 句尾的分号最好不要省略;
 
-## JavaScript中的函数定义
- 1、JavaScript中的函数
+### JavaScript中的函数定义
+ 1. JavaScript中的函数
 - 一组可以随时随地运行的语句
 - 将脚本编写为函数以避免页面载入时执行该脚本
 
- 2、分类
+ 2. 分类
 -  系统函数
 -  自定义函数
 
-3、系统函数
+3. 系统函数
 
 |||
  |-----|-----|
@@ -175,7 +175,7 @@ var iNum=23.0; //浮点数
  |isNaN() |检查某个值是否是数字,返回true \| false|
 | eval() |计算 JavaScript 字符串，并把它作为脚本代码来执行|
 
-4、自定义函数
+4. 自定义函数
 语法：
 
 ```
@@ -191,7 +191,7 @@ var iNum=23.0; //浮点数
 ```
 >传入的参数是可选的, 传入数量没有限制，多余的参数会忽略。
 
-5、 如何调用函数
+5.  如何调用函数
 函数可以通过其名字加上括号中的参数进行调用:`函数名()`
 
 ```
@@ -207,7 +207,7 @@ alert( name + "hello" );
 }
 sayHello(" Tom ");
 ```
-6、匿名函数
+6. 匿名函数
 
 - 匿名函数的基本形式为`(function(){...})();`
 - 前面的括号包含函数体，后面的括号就是给匿名函数传递参数并立即执行
@@ -241,7 +241,7 @@ alert(x);
 }(9);
 ```
 
-7、函数如何返回值
+7. 函数如何返回值
 通过 return 关键字返回函数的值
 函数在执行过 return 语句后立即停止代码。因此，return 语句后的代码都不会被执行。
 
